welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: not found: value Maths
  var N = Maths.abs(n)
          ^