welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
  var N = Maths.abs(n)
  if (N > 21) {
    return 2*(N-21)
  } else return (N-21)
}